Yay, it's all finished :-D

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -27,16 +27,9 @@
         <div class="container">
     {% for comment in comments %}
         <div class="row">
-            {{ comment }}
+            {{ comment.content }}
         </div>
     {% endfor %}
-        <div class="row">
-
-        </div>
-
-        <div class="row">
-
-        </div>
 
         <div class="row">
             <form action="." method="POST">
