Created the login and logout link

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -20,6 +20,13 @@
                     </button>
                     <a class="navbar-brand" href="#">Ulin's Portfolio</a>
                 </div>
+                <ul class="nav navbar-nav navbar-right">
+                        {% if current_user.is_authenticated %}
+                            <li><a href="{{ url_for('logout') }}">Log out</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('login') }}">Log in</a></li>
+                        {% endif %}
+                </ul>
             </div>
         </nav>
 
@@ -31,12 +38,15 @@
         </div>
     {% endfor %}
 
+    {% if current_user.is_authenticated %}
         <div class="row">
             <form action="." method="POST">
-                <textarea class="form-control" name="contents" placeholder="Enter a comment"></textarea>
+                <textarea name="contents" placeholder="Enter a comment" class="form-control"></textarea>
                 <input type="submit" class="btn btn-success" value="Post comment">
             </form>
         </div>
+    {% endif %}
+
         </div><!-- /.container -->
     </body>
 </html>
