--- a/templates/login_page.html
+++ b/templates/login_page.html
@@ -71,17 +71,24 @@
         <nav class="navbar navbar-lilac">
             <div class="container">
                 <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed"
-data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria
-controls="navbar">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">My scratchpad: login
-page</a>
+                    <a class="navbar-brand" href="#">Ulin Nuha's</a>
+                    <a class="navbar-brand" href="{{ url_for('profile') }}" class="btn btn-primary navbar-btn" style="margin-left: 15px;">Profile Page</a>
+                    <a class="navbar-brand" href="{{ url_for('index') }}" class="btn btn-default navbar-btn" style="margin-left: 10px;">Comments</a>
+                    <a class="navbar-brand" href="{{ url_for('game') }}" class="btn btn-default navbar-btn" style="margin-left: 10px;">Game</a>
                 </div>
+                <ul class="nav navbar-nav navbar-right">
+                        {% if current_user.is_authenticated %}
+                            <li><a href="{{ url_for('logout') }}">Log out</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('login') }}">Log in</a></li>
+                        {% endif %}
+                </ul>
             </div>
         </nav>
         <div class="container">
